--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,10 @@
 {
   "parser": "@babel/eslint-parser",
-  "extends": [
-    "eslint:recommended"
-  ],
+  "extends": ["eslint:recommended"],
   "env": {
     "browser": true,
-    "node": true
+    "node": true,
+    "es6": true
   },
   "parserOptions": {
     "ecmaVersion": 8,
